# demo-spark-pipelines

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
datasets/: sample_dataframe.csv
datasets/nicklitwinow/gdp-by-country/: GDP.csv
datasets/sample_dataframe_aggregation/: part-00000-3df8a381-8290-44d0-b23c-3cb068fa963f-c000.csv
datasets/sample_dataframe_aggregation_csv/: .part-00000-3652ea4c-7cdf-445e-a6b5-11a78e25e042-c000.csv.crc  .part-00000-a5b58a5b-76f7-4ea9-9415-29dd06851ea8-c000.csv.crc  part-00000-3652ea4c-7cdf-445e-a6b5-11a78e25e042-c000.csv
datasets/sample_dataframe_aggregation_parquet/: .part-00000-49c54ac8-1baa-43ad-9402-36ea12727693-c000.snappy.parquet.crc  .part-00000-6f4138a7-7721-4018-852e-0163c44b2c2c-c000.snappy.parquet.crc  part-00000-23c5cf55-7947-48c2-b27d-6b0d327c3d32-c000.snappy.parquet  part-00000-6f4138a7-7721-4018-852e-0163c44b2c2c-c000.snappy.parquet
jobs/: generate_data.py  spark_test.py
notebooks/: data_generator.ipynb  data_generator_kaggle.ipynb  download_data.py  intro.ipynb  intro_case.ipynb  joins_and_aliases.ipynb  nlp.ipynb  sample.ipynb  solana.ipynb  spark_test.py
notebooks/jobs/: solana.py
notebooks/tests/: test_solana.py
output/write_parquet/: .part-00000-6e986912-193b-448f-802a-32d03191affa-c000.snappy.parquet.crc  .part-00001-6e986912-193b-448f-802a-32d03191affa-c000.snappy.parquet.crc  part-00000-6e986912-193b-448f-802a-32d03191affa-c000.snappy.parquet  (+1 more)
scripts/: style-check.sh
tests/: test_solana.py
transformations/: nlp.py  solana.py
(+5 files in other folders)
