[tool.poetry]
name = "data_transformations"
version = "0.1.0"
description = "data transformations"
authors = ["ThoughtWorks <info@thoughtworks.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^1.2.4"
pyarrow = "^4.0.0"
pyspark = "^3.1.1"
python = "^3.9"
jupyterlab = "^3.3.4"
kaggle = "^1.5.12"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
black = {extras = ["jupyter"], version = "^22.3.0"}

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
pytest = "^6.2.4"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
